--- a/client/src/components/organisms/FinalResult/index.module.scss
+++ b/client/src/components/organisms/FinalResult/index.module.scss
@@ -4,7 +4,7 @@
     align-items: center;
     max-width: 362px;
     min-height: 372px;
-    padding: 30px 20px;
+    padding: 50px 20px 30px 20px;
     gap: 20px;
     background-color: white;
     border-radius: 10px;
@@ -17,7 +17,6 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-    
 }
 
 .userInfo {
@@ -26,7 +25,6 @@
     overflow-x: auto;  // 2. 가로 스크롤 활성화
     width: 100%;       // 3. 컨테이너 전체 너비 사용
     gap: 20px;
-
 }
 
 .candidate { 
@@ -35,7 +33,6 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
-    
 }
 
 .poster > .poster {
