--- a/client/src/components/templates/FinalTemplate/index.module.scss
+++ b/client/src/components/templates/FinalTemplate/index.module.scss
@@ -14,8 +14,9 @@
 
 .main {
   max-height: 800px;
-  position: relative;
   bottom: 290px;
+  z-index: 1;
+  margin-top: 60px;
 }
 
 .voteInfo {
@@ -26,11 +27,13 @@
 }
 
 .background {
-  position: relative;
+  position: absolute;
+  top: 0; 
+  left: 0;
   background-color: #fff6dc;
   width: 100%;
-  height: 300px;
-  z-index: -100px;
+  height: 500px;
+  z-index: 0
 }
 
 .sessionInfo {
@@ -42,10 +45,11 @@
 
 .crown {
   position: absolute;
-  bottom: -30px;
+  top: -40px;
+  left: 50%;
+  transform: translateX(-50%);
   width: 80px;
   height: 80px;
-  top: 225px;
 }
 
 .result {
@@ -67,6 +71,7 @@
   justify-content: center;
   align-items: center;
   gap: 40px;
+  position: relative;
 }
 
 .head {
