--- a/client/src/components/atoms/ChatHeart/index.module.scss
+++ b/client/src/components/atoms/ChatHeart/index.module.scss
@@ -1,35 +1,3 @@
-.chatBar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 8px;
-  // padding: 10px 0;
-
-  .sendButton {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    transition: opacity 0.2s ease;
-
-    img {
-      width: 24px;
-      height: 24px;
-    }
-
-    &:hover {
-      opacity: 0.7;
-    }
-
-
-    &:active {
-      opacity: 0.5;
-    }
-  }
-}
-
 // ==================
 // Heart
 // ==================
@@ -42,6 +10,7 @@
 }
 
 .heartContainer {
+  position: relative;
   display: inline-block;
 }
 
