--- a/client/src/components/molecules/Header/index.module.scss
+++ b/client/src/components/molecules/Header/index.module.scss
@@ -1,7 +1,8 @@
 #header {
+  max-width: 500px;
   width: 100%;
   height: 60px;
-  position: sticky;
+  position: fixed;
   top: 0px;
   padding: 10px 0;
   display: flex;
