--- a/client/src/components/organisms/TabContainer/index.module.scss
+++ b/client/src/components/organisms/TabContainer/index.module.scss
@@ -1,15 +1,10 @@
 .container {
-  border: 1px solid #777;
+  border-top: 1px solid #777;
   padding-top: 20px;
-  min-width: 500px;
   width: 100%;
-  // height: 370px;
   display: flex;
   flex-direction: column;
-  // gap: 4px;
   background-color: #333;
-  // background-color: rgba(0,0,0,0.7);
-  // border-radius: 20px 20px 0 0;
   transition: transform 0.3s ease-in-out;
 
   &.slideDown {
