--- a/client/src/components/organisms/ResultChatContainer/index.module.scss
+++ b/client/src/components/organisms/ResultChatContainer/index.module.scss
@@ -4,9 +4,10 @@
   }
 }
 
+
 .container {
   // flex: 1;
-  padding: 10px;
+  padding: 20px 16px 16px 20px;
   height: 100%;
   max-width: 500px;
   width: 100%;
