--- a/client/src/components/molecules/ElectionListItem/index.module.scss
+++ b/client/src/components/molecules/ElectionListItem/index.module.scss
@@ -12,8 +12,8 @@
 
   // Menu
   ul {
-    right: 34px; 
-    top : 0;
+    right: 34px;
+    top: 0;
   }
 }
 
@@ -27,7 +27,7 @@
   gap: 4px;
 }
 
-.title__wrap{
+.title__wrap {
   width: inherit;
   display: flex;
   gap: 0px;
@@ -55,6 +55,7 @@
 .period {
   font-size: 14px;
   color: var(--color-gray-light);
+  white-space: pre-line;
 }
 
 .resultButton {
@@ -84,7 +85,7 @@
   transform: rotate(180deg);
 }
 
-.right{
+.right {
   display: flex;
   align-items: center;
   gap: 10px;
