--- a/client/src/assets/styles/globals.scss
+++ b/client/src/assets/styles/globals.scss
@@ -2,6 +2,14 @@
 @use 'reset';
 @use 'fonts';
 
+html,
+body {
+  -webkit-text-size-adjust: none; /* 크롬, 사파리, 오페라 신버전 */
+  -ms-text-size-adjust: none; /* IE */
+  -moz-text-size-adjust: none; /* 파이어폭스 */
+  -o-text-size-adjust: none; /* 오페라 구버전 */
+}
+
 body {
   font-family: 'Pretendard', sans-serif;
   color: var(--color-black);
