--- a/client/src/components/molecules/Menu/index.module.scss
+++ b/client/src/components/molecules/Menu/index.module.scss
@@ -2,12 +2,27 @@
   position: absolute;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
-  gap: 20px;
-  border-radius: 10px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
   background-color: #fff;
   z-index: 10;
+  border-radius: 10px;
+
+  li {
+    text-align: center;
+    padding: 10px 15px;
+  }
+  li:first-child {
+    border-radius: 10px 10px 0 0;
+  }
+
+  li:nth-child(2n) {
+    background-color: var(--color-gray-light);
+    color: var(--color-white);
+  }
+
+  li:last-child {
+    border-radius: 0 0 10px 10px;
+  }
 }
 
 .is-open {
